add rate-limit support

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "event-iterator": "^2.0.0",
     "fastify": "^3.2.0",
+    "fastify-rate-limit": "^4.0.2",
     "fastify-sse-v2": "^2.0.2",
     "fastify-static": "^3.2.0",
     "ioredis": "^4.17.3",
